@@ -106,82 +106,114 @@ public abstract class Intersectable {
         return geoList == null ? null : geoList.stream().map(gp -> gp.point).toList();
     }
     /**
-     * Checks if a ray intersects with this bounding box.
+     * Checks if a ray intersects with this bounding box, used for BVH optimization.
+     *
+     * This method calculates the intersection of the ray with the bounding box using
+     * the slab method, which involves checking intersection with the planes defining
+     * the bounding box's sides. The method returns true if the ray intersects the
+     * bounding box and false otherwise.
      *
      * @param ray The ray to test for intersection
-     * @return true if the ray intersects the box, false otherwise
+     * @return true if the ray intersects the bounding box, false otherwise
      */
     public boolean hasIntersection(Ray ray) {
-        if (!BVH || boundingBox == null)
+        // If BVH is not enabled or the bounding box is null, assume intersection is possible
+        if (!BVH || boundingBox == null) {
             return true;
+        }
 
+        // Calculate intersections with the slabs on the x-axis
         double xMin = (boundingBox.min.getX() - ray.getHead().getX()) / ray.getDirection().getX();
         double xMax = (boundingBox.max.getX() - ray.getHead().getX()) / ray.getDirection().getX();
 
+        // Ensure xMin is the smaller value, xMax is the larger value
         if (xMin > xMax) {
             double temp = xMin;
             xMin = xMax;
             xMax = temp;
         }
 
+        // Calculate intersections with the slabs on the y-axis
         double yMin = (boundingBox.min.getY() - ray.getHead().getY()) / ray.getDirection().getY();
         double yMax = (boundingBox.max.getY() - ray.getHead().getY()) / ray.getDirection().getY();
 
+        // Ensure yMin is the smaller value, yMax is the larger value
         if (yMin > yMax) {
             double temp = yMin;
             yMin = yMax;
             yMax = temp;
         }
 
+        // Check for any potential separation on the x and y planes, indicating no intersection
         if ((xMin > yMax) || (yMin > xMax)) {
             return false;
         }
 
+        // Update xMin to the maximum of xMin and yMin (overlap region)
         if (yMin > xMin) {
             xMin = yMin;
         }
 
+        // Update xMax to the minimum of xMax and yMax (overlap region)
         if (yMax < xMax) {
             xMax = yMax;
         }
 
+        // Calculate intersections with the slabs on the z-axis
         double zMin = (boundingBox.min.getZ() - ray.getHead().getZ()) / ray.getDirection().getZ();
         double zMax = (boundingBox.max.getZ() - ray.getHead().getZ()) / ray.getDirection().getZ();
 
+        // Ensure zMin is the smaller value, zMax is the larger value
         if (zMin > zMax) {
             double temp = zMin;
             zMin = zMax;
             zMax = temp;
         }
 
+        // Check for any potential separation between x and z, or y and z planes, indicating no intersection
         if ((xMin > zMax) || (zMin > xMax)) {
             return false;
         }
 
+        // Update xMin to the maximum of xMin and zMin (overlap region)
         if (zMin > xMin) {
             xMin = zMin;
         }
 
+        // Update xMax to the minimum of xMax and zMax (overlap region)
         if (zMax < xMax) {
             xMax = zMax;
         }
 
+        // Ensure the intersection occurs in front of the ray origin
         return xMax > 0;
-
     }
 
+    /**
+     * The BoundingBox class represents an axis-aligned bounding box (AABB) used for
+     * spatial partitioning in a 3D space. It is used for optimizing ray intersection tests
+     * by enclosing geometric objects within these boxes.
+     */
     public class BoundingBox {
-        private Point min = Point.NEGATIVE_INFINITY;
-        private Point max = Point.POSITIVE_INFINITY;
+        private Point min = Point.NEGATIVE_INFINITY;  // The minimum corner of the bounding box
+        private Point max = Point.POSITIVE_INFINITY;  // The maximum corner of the bounding box
 
+        /**
+         * Constructor for creating a bounding box with specified minimum and maximum points.
+         *
+         * @param min The minimum corner point of the bounding box
+         * @param max The maximum corner point of the bounding box
+         */
         public BoundingBox(Point min, Point max) {
             this.min = min;
             this.max = max;
         }
 
-
-
-
+        /**
+         * Calculates and returns the center point of the bounding box.
+         *
+         * @return The center point of the bounding box
+         */
         public Point getCenter() {
             return new Point(
                     (min.getX() + max.getX()) / 2,
@@ -191,27 +223,38 @@ public abstract class Intersectable {
         }
 
         /**
-         * Union of two bounding boxes
+         * Merges this bounding box with another bounding box to create a new bounding box
+         * that encloses both.
          *
-         * @param box the other bounding box
-         * @return the union of the two bounding boxes
+         * @param box The other bounding box to merge with
+         * @return A new bounding box that is the union of the two bounding boxes
          */
         private BoundingBox union(BoundingBox box) {
             return new BoundingBox(
-                    new Point(Math.min(min.getX(), box.min.getX()), Math.min(min.getY(),
-                            box.min.getY()), Math.min(min.getZ(), box.min.getZ())),
-                    new Point(Math.max(max.getX(), box.max.getX()), Math.max(max.getY(),
-                            box.max.getY()), Math.max(max.getZ(), box.max.getZ()))
+                    new Point(Math.min(min.getX(), box.min.getX()),
+                            Math.min(min.getY(), box.min.getY()),
+                            Math.min(min.getZ(), box.min.getZ())),
+                    new Point(Math.max(max.getX(), box.max.getX()),
+                            Math.max(max.getY(), box.max.getY()),
+                            Math.max(max.getZ(), box.max.getZ()))
             );
         }
 
-
-        static public List<Intersectable> buildBVH(List<Intersectable> intersectableList) {
+        /**
+         * Constructs a Bounding Volume Hierarchy (BVH) from a list of intersectable geometries.
+         * The BVH is a binary tree structure used to efficiently test for ray intersections
+         * with complex scenes by dividing the scene into smaller bounding volumes.
+         *
+         * @param intersectableList The list of geometries to build the BVH from
+         * @return A list of intersectable geometries organized into a BVH
+         */
+        public static List<Intersectable> buildBVH(List<Intersectable> intersectableList) {
+            // Base case: if the list contains one or no geometries, return the list as is
             if (intersectableList.size() <= 1) {
                 return intersectableList;
             }
 
-            // extract infinite geometries into a separate list
+            // Extract infinite geometries (geometries without bounding boxes) into a separate list
             List<Intersectable> infiniteGeometries = new LinkedList<>();
             for (int i = 0; i < intersectableList.size(); i++) {
                 var g = intersectableList.get(i);
@@ -222,24 +265,25 @@ public abstract class Intersectable {
                 }
             }
 
+            // If all geometries are infinite, return the list of infinite geometries
             if (intersectableList.isEmpty()) {
                 return infiniteGeometries;
             }
 
-            // sort geometries based on their bounding box centroids along an axis (e.g.,x - axis)
+            // Sort the remaining geometries based on the x-axis of their bounding box centers
             intersectableList.sort(Comparator.comparingDouble(g ->
                     g.getBoundingBox().getCenter().getX()));
 
-            // split the list into two halves
+            // Split the list into two halves for recursive BVH construction
             int mid = intersectableList.size() / 2;
             List<Intersectable> leftGeometries = buildBVH(intersectableList.subList(0, mid));
             List<Intersectable> rightGeometries = buildBVH(intersectableList.subList(mid, intersectableList.size()));
 
-            // create a bounding box for the left and right geometries
+            // Create bounding boxes for the left and right sets of geometries
             BoundingBox leftBox = getBoundingBox(leftGeometries);
             BoundingBox rightBox = getBoundingBox(rightGeometries);
 
-            // create a combined bounding box
+            // Combine the left and right geometries into a single Geometries object
             Geometries combined = new Geometries();
             for (var g : leftGeometries) {
                 if (g != null)
@@ -250,6 +294,7 @@ public abstract class Intersectable {
                     combined.add(g);
             }
 
+            // Create a combined bounding box that encloses both the left and right boxes
             if (leftBox != null && rightBox != null) {
                 combined.boundingBox = leftBox.union(rightBox);
             } else if (leftBox != null) {
@@ -258,25 +303,32 @@ public abstract class Intersectable {
                 combined.boundingBox = rightBox;
             }
 
-            // return the list of geometries
+            // Add the combined bounding box to the list of geometries and return the result
             List<Intersectable> result = new LinkedList<>(infiniteGeometries);
             result.add(combined);
             return result;
         }
 
+        /**
+         * Calculates the bounding box that encloses a list of intersectable geometries.
+         *
+         * @param intersectableList The list of geometries to calculate the bounding box for
+         * @return A bounding box that encloses all the geometries in the list, or null if the list is empty
+         */
         private static BoundingBox getBoundingBox(List<Intersectable> intersectableList) {
             if (intersectableList.isEmpty()) {
                 return null;
             }
-            // get the bounding box of the first geometry and union it with the rest
-            BoundingBox boundingBox = intersectableList.getFirst().getBoundingBox();
+
+            // Initialize the bounding box with the first geometry's bounding box
+            BoundingBox boundingBox = intersectableList.get(0).getBoundingBox();
+
+            // Union the bounding box with each subsequent geometry's bounding box
             for (var g: intersectableList) {
                 boundingBox = boundingBox.union(g.getBoundingBox());
             }
+
             return boundingBox;
-
-
+        }
     }
-    }
-
 }
